--- a/css/index.css
+++ b/css/index.css
@@ -1,15 +1,29 @@
 body {
-	background-color: black;
+	background-color: #444B59;
+	background-image: url('../assets/river_cool_edited.jpg');
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	margin-top: 0;
+	margin-right: 0;
+	margin-left: 0;
 }
 
 .header {
 	position: relative;
-	margin-right: auto;
-	margin-left: auto;
+	margin-right: 0;
+	margin-left: 0;
+	margin-top: 0;
 	height: 75px;
 	width: 100%;
 	right: 0;
 	left: 0;
+	top: 0;
+	background-color: #FFFFFF;
+	opacity: 0.60;
 }
 
 .header > .logo {
@@ -19,17 +33,18 @@ body {
 	padding-top: 25px;
 	font-size: 15px;
 	display: block;
-	color: white;
-	left: 20px;
+	color: #000000;
+	left: 10px;
 
-	background-image: url('../assets/logo2.png');
+	background-image: url('../assets/logo3.png');
 	background-repeat: no-repeat;
 	background-position: 8px 0px;
-	background-size: 70px 70px;
+	background-size: 200px 70px;
 	position: absolute;
 	cursor: hand;
 	height: 70px;
-	width: 150px;
+	width: 200px;
+	margin-top: 3px;
 }
 
 .header ul {
@@ -47,21 +62,22 @@ body {
 	text-transform: capitalize;
 	text-decoration: none;
 	font-size: 20px;
-	display: block;
+	display: inline-block;
 	width: 150px;
 	cursor: hand;
-	color: gray;
-
-    -webkit-transition: color 0.5s;
-    transition: color 0.5s;
+	/*color: #C2C2C2;*/
+	color: #001223;
+  transition: color 0.5s;
+	text-align: center;
 }
 
 .header a:hover {
-	color: white;
+	/*color: #CFCFCF;*/
+	color: #90ABA7;
 }
 
 .banner {
-	background-image: url('../assets/bg2.png');
+	background-image: url('../assets/river_cool_edited.jpg');
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -72,25 +88,32 @@ body {
 }
 
 .quote {
-	background-color: rgba(0, 0, 0, 0.5);
-	position: relative;
-	padding: 13px;
-	width: 275px;
-	float: right;
-	right: 5%;
-	top: 55%;
+	background-color: rgba(0, 0, 0, 0);
+	position: absolute;
+	width: 100%;
+	float: left;
+	bottom: 0;
+	left: 30px;
+}
+
+@font-face {
+    font-family: 'Cinzel Black';
+    src: url('../assets/fonts/Cinzel-Black.ttf');
+}
+
+#first {
+	font-family: 'Cinzel Black', serif;
+	letter-spacing: 5px;
+}
+
+#first:hover {
+	text-shadow: -4px 0px 100px rgba(255, 255, 255, 1);
+	opacity: 1.0;
 }
 
 .quote > .bigQuote {
-	font-family: 'Droid Serif', serif;
-	font-size: 50px;
+	font-family: Impact, Charcoal, sans-serif;
+	font-size: 150px;
 	color: white;
-	opacity: 0.9;
-}
-
-.quote > .smallQuote {
-	font-family: 'Roboto Condensed', sans-serif;
-	margin-top: 25px;
-	font-size: 15px;
-	color: white;
+	opacity: 0.8;
 }
