--- a/css/index.css
+++ b/css/index.css
@@ -61,7 +61,7 @@ body {
 }
 
 .banner {
-	background-image: url('../assets/bg2.png');
+	background-image: url('../assets/bg11-edited.png');
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
