--- a/css/index.css
+++ b/css/index.css
@@ -2,36 +2,46 @@ body {
 	margin: 0px;
 }
 
+table {
+	width: 276px;
+	margin-top: 250px;
+}
+
 .container {
 	width: 100%;
 	height: 100%;
-	overflow: hidden;
+	/*overflow: hidden;*/
 }
 
 .sidebar {
+	z-index: 5;
 	float: left;
 	height: 100%;
 	width: 275px;
 	margin-top: -8px;
 	margin-left: -8px;
+	position: absolute;
 	padding-bottom: 16px;
 	border-right: 2px solid black;
-	background-color: rgba(20, 20, 50, 0.5);
+	background-color: rgba(0, 0, 0, 0.5);
 }
 
-.mapholder {
+.map {
+	width: 100%;
 	height: 100%;
-	width: 81%;
-	/*overflow: hidden;*/
-	/*margin-left: 269px;*/
 }
 
-.mapholder iframe {
-	position: relative;
-    top: -102%;
-    left: 269px;
-    float: left;
-    /* right: 0px; */
-    width: 101% !important;
-    height: 103% !important;
+.filter {
+	cursor: hand;
+	text-align: center;
+	display: table-cell;
+	vertical-align: middle;
+	color: rgb(100, 100, 100);
+	background-color: rgba(0, 0, 0, 0.5);
+}
+
+.filter:hover {
+	color: white;
+	color: rgb(200, 200, 200);
+	background-color: rgba(50, 50, 50, 0.75)
 }
