--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -22,7 +22,7 @@ body {
 	color: white;
 	left: 20px;
 
-	background-image: url('../assets/logo2.png');
+	background-image: url('logo2.png');
 	background-repeat: no-repeat;
 	background-position: 8px 0px;
 	background-size: 70px 70px;
@@ -61,7 +61,7 @@ body {
 }
 
 .banner {
-	background-image: url('../assets/bg10-edited.png');
+	background-image: url('bg10-edited.png');
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
